@@ -2,6 +2,7 @@
 v1.0.1-git
 ----------
 
+[jan] Make Horde_Queue a mandatory dependency.
 
 
 ------
